--- a/Main/Main.vcxproj
+++ b/Main/Main.vcxproj
@@ -154,6 +154,9 @@
     <ClInclude Include="includs.h" />
     <ClInclude Include="names.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Library Include="..\Debug\loger.lib" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
