--- a/vCONTROL/vCONTROL.vcxproj.filters
+++ b/vCONTROL/vCONTROL.vcxproj.filters
@@ -15,20 +15,16 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp">
+    <ClInclude Include="vCONTROL.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Source.cpp">
       <Filter>Resource Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="includs.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="names.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
     <Library Include="..\Debug\loger.lib" />
-    <Library Include="..\Debug\vCONTROL.lib" />
   </ItemGroup>
 </Project>
