добавление либ файлов

--- a/Main/Main.vcxproj
+++ b/Main/Main.vcxproj
@@ -155,6 +155,10 @@
     <ClInclude Include="includs.h" />
     <ClInclude Include="names.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Library Include="..\Debug\loger.lib" />
+    <Library Include="..\Debug\vCONTROL.lib" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
