--- a/vCONTROL/vCONTROL.vcxproj.filters
+++ b/vCONTROL/vCONTROL.vcxproj.filters
@@ -21,6 +21,7 @@
   </ItemGroup>
   <ItemGroup>
     <Library Include="..\Debug\loger.lib" />
+    <Library Include="..\Debug\vMENUS.lib" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source.cpp">
