--- a/vCONTROL/vCONTROL.vcxproj
+++ b/vCONTROL/vCONTROL.vcxproj
@@ -152,14 +152,19 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="OpenGl.h" />
+    <ClInclude Include="OpenGL_math.h" />
+    <ClInclude Include="RenderObject.h" />
     <ClInclude Include="vCONTROL.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Source.cpp" />
+    <ClCompile Include="OpenGl.cpp" />
+    <ClCompile Include="OpenGL_math.cpp" />
+    <ClCompile Include="RenderObject.cpp" />
+    <ClCompile Include="vCONTROL.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Library Include="..\Debug\loger.lib" />
-    <Library Include="..\Debug\vMENUS.lib" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
