Переработка части заголовков, Начат модуль хранения и подмодуль его по хранению интерфейса

--- a/mCONTROL/mCONTROL.vcxproj.filters
+++ b/mCONTROL/mCONTROL.vcxproj.filters
@@ -15,16 +15,16 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Source.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
     <ClInclude Include="mCONTROL.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Library Include="..\Debug\loger.lib" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="mCONTROL.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
