--- a/Main/Main.vcxproj
+++ b/Main/Main.vcxproj
@@ -156,12 +156,12 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="includs.h" />
     <ClInclude Include="names.h" />
   </ItemGroup>
   <ItemGroup>
     <Library Include="..\Debug\loger.lib" />
     <Library Include="..\Debug\mCONTROL.lib" />
+    <Library Include="..\Debug\stCONTROL.lib" />
     <Library Include="..\Debug\vCONTROL.lib" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
