--- a/Main/Main.vcxproj.filters
+++ b/Main/Main.vcxproj.filters
@@ -15,9 +15,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="includs.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="names.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -26,6 +23,7 @@
     <Library Include="..\Debug\vCONTROL.lib" />
     <Library Include="..\Debug\loger.lib" />
     <Library Include="..\Debug\mCONTROL.lib" />
+    <Library Include="..\Debug\stCONTROL.lib" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
