--- a/Opengl_buffer/Opengl_buffer.vcxproj.filters
+++ b/Opengl_buffer/Opengl_buffer.vcxproj.filters
@@ -15,17 +15,13 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="stCONTROL.h">
+    <ClInclude Include="OPENGL_BUFFER.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="stCONTROL.cpp">
+    <ClCompile Include="OPENGL_BUFFER.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <Library Include="..\Debug\stMENU.lib" />
-    <Library Include="..\Debug\loger.lib" />
   </ItemGroup>
 </Project>
