--- a/vRECURCE/vRECURCE.vcxproj.filters
+++ b/vRECURCE/vRECURCE.vcxproj.filters
@@ -15,17 +15,16 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="stCONTROL.h">
+    <Library Include="..\Debug\Opengl_buffer.lib" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="vRESOURCE.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="stCONTROL.cpp">
+    <ClCompile Include="vRESOURCE.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <Library Include="..\Debug\stMENU.lib" />
-    <Library Include="..\Debug\loger.lib" />
   </ItemGroup>
 </Project>
