--- a/gCONTROL/gCONTROL.vcxproj.filters
+++ b/gCONTROL/gCONTROL.vcxproj.filters
@@ -15,17 +15,25 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="stCONTROL.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="stCONTROL.cpp">
+    <ClCompile Include="gCONTROL.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="gOBJECT.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="gCELL.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <Library Include="..\Debug\stMENU.lib" />
-    <Library Include="..\Debug\loger.lib" />
+    <ClInclude Include="gCONTROL.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="gOBJECT.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="gCELL.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
