сделаны меню и заложены основы анимации

--- a/Main/Main.vcxproj
+++ b/Main/Main.vcxproj
@@ -153,9 +153,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="GUI.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="GUI.h" />
     <ClInclude Include="names.h" />
   </ItemGroup>
   <ItemGroup>
