--- a/CONVEER/CONVEER.vcxproj.filters
+++ b/CONVEER/CONVEER.vcxproj.filters
@@ -15,23 +15,13 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="gCONTROL.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="gOBJECTS.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="gCONTROL.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="gOBJECTS.h">
+    <ClInclude Include="gCONVEER.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <Library Include="..\Debug\gNET.lib" />
-    <Library Include="..\Debug\CONVEER.lib" />
+    <ClCompile Include="gCONVEER.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
